Closed Bug 1567191 Opened 5 years ago Closed 5 years ago

Datetime input attribute value changes is not correct

Categories

(Core :: Layout: Form Controls, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla70
Tracking Status
firefox70 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This datetime-specific attribute change handling code is in nsDateTimeControlFrame::AttributeChanged.

But since it was rewritten in bug 1496242, the UA widget may live while there is no frame (this was not the case with the XBL implementation). This means that attribute changes that happen while the <input> doesn't have a frame (due to various reasons, but it's probably easily testable giving it display: none) are not observed by the UA widget, ending up in potentially broken states.

The attribute change handling should live in HTMLInputElement::AttributeChanged, not nsDateTimeControlFrame.

I'll fix this after bug 1479708, to make the change there easier :)

Depends on: 1479708

Self nag

Flags: needinfo?(emilio)
Assignee: nobody → emilio
Flags: needinfo?(emilio)

It's the only sound place now that we use Shadow DOM, since the widget exists
when we have no frames.

Pushed by emilio@crisal.io: https://hg.mozilla.org/integration/autoland/rev/f8cd1dc356e0 Move datetime input widget attribute handling code to HTMLInputElement. r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: