Bug 1567191 - Move datetime input widget attribute handling code to HTMLInputElement. r=smaug

It's the only sound place now that we use Shadow DOM, since the widget exists
when we have no frames.

Differential Revision: https://phabricator.services.mozilla.com/D40509